Multiple SPI buses. And came up with microcontroller .spec file

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
   "files.associations": {
-    "*.h.test": "c",
-    "*.c.test": "c",
-    "*.test": "cpp"
+    "*.test": "c",
+    "*.spec": "c",
+    "*.example": "c"
   }
 }
