--- a/user_config.h.example
+++ b/user_config.h.example
@@ -2,6 +2,9 @@
  * This file should contain user configuration needed for the drivers
  *
  * You should not alter any other .h files for these drivers.
+ *
+ * Make a COPY of this file and call it "user_config.h", no not remove the ".example" from this file,
+ * it should remain in the repository
  */
 #ifndef USER_CONFIG
 #define USER_CONFIG
@@ -23,6 +26,15 @@
 // Adjust these masks so IDs can be checked against the filters (0x000 will make a match with any filter)
 #define CAN_MASK1           0x000
 #define CAN_MASK2           0x000
+
+
+
+/*********************************
+ *      SPI Configuration        *
+ *********************************/
+
+// The DEFAULT_SPI_BUS is the SPI Bus that this library will use
+#define DEFAULT_SPI_BUS     SPI_BUS_4
 
 
 #endif
