CAN Tests! Even fixed some problems with the CAN drivers.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
     "*.example": "c",
     "solarcar.h": "c",
     "stdlib.h": "c",
-    "*.mock": "c"
+    "*.mock": "c",
+    "importer.h": "c"
   }
 }
