--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,9 @@
   "files.associations": {
     "*.driver": "c",
     "*.tests": "c",
-    "framework.h": "c"
+    "framework.h": "c",
+    "interface.h": "c",
+    "mock.h": "c",
+    "stdlib.h": "c"
   }
 }
