Please save me oh merciful C God.
Crazy ridiculous directives that behave different in header files vs code files all so we can have a .spec file that does some cool stuff.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
     "framework.h": "c",
     "interface.h": "c",
     "mock.h": "c",
-    "stdlib.h": "c"
+    "stdlib.h": "c",
+    "*.spec": "c"
   }
 }
