Unit Tests for MCP2515, changed some stuff on interrupts.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
     "stdlib.h": "c",
     "*.spec": "c",
     "*.mock": "c",
-    "config.h": "c"
+    "config.h": "c",
+    "mcp2515.h": "c"
   }
 }
