Backwards compatibility (kinda file).

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
     "*.spec": "c",
     "*.mock": "c",
     "config.h": "c",
-    "mcp2515.h": "c"
+    "mcp2515.h": "c",
+    "datatypes.h": "c"
   }
 }
